--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name" : "甜水",
+    "name" : "WAITING...",
     "appid" : "__UNI__150C09F",
     "description" : "",
     "versionName" : "1.0.0",
